--- a/index.html
+++ b/index.html
@@ -2,16 +2,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" href="styles/main.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="styles\font-awesome-4.7.0\css\font-awesome.css">
 </head>
-	<body style = "background-image: url(Mountains1.jpg)">
+	<body style = "background-image: url(images/mountain.jpg); font-family: Verdana">
 	<div class="columns">
 		<h1 class="columns">Hello! My name is Iymen Abdella</h1>
-		<p class="columns">I am a (future) computer scientist who hopes to improve the world we live in by helping people using software. I am someone who loves to solve problems and learn about the newest technology shaping our world. Thank you for taking the time to learn about me! </p>
+		<p class="columns">I am a (future) computer scientist who hopes to improve the world we live in by helping people, using software. I am someone who loves to solve problems and learn about the newest technology shaping our world. Thank you for taking the time to learn about me! </p>
 		<div class="rows">
 				<a href="https://github.com/BlackJackMaverick"><i class="fa fa-github"></i><br>Personal Projects</a>
-				<a href="resume.pdf" download="Iymen Abdella's Resume"><i class="fa fa-file-text"></i><br> Download Resume</a>
+				<a href="documents/com-sci-resume.pdf" download="Iymen Abdella's Resume"><i class="fa fa-file-text"></i><br> Download Resume</a>
 				<a href="mailto:iymen-abdella@hotmail.com"><i class="fa fa-envelope"></i><br>Send me a message:<br>iymen-abdella@hotmail.com</a>
 		</div>
 	</div>
