--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 <head>
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="styles/main.css">
 </head>
 	<body style = "background-image: url(images/mountain.jpg); font-family: Verdana">
 	<div class="columns">
