--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body style = "background-image: url(images/mountain.jpg); font-family: Verdana">
 	<div class="columns">
 		<h1 class="columns">Hello! My name is Iymen Abdella</h1>
-		<p class="columns">I am a (future) computer scientist who hopes to improve the world we live in by helping people, using software. I am someone who loves to solve problems and learn about the newest technology shaping our world. Thank you for taking the time to learn about me,! </p>
+		<p class="columns">I am a (future) computer scientist who hopes to improve the world we live in by helping people, using software. I am someone who loves to solve problems and learn about the newest technology shaping our world. Thank you for taking the time to learn about me! </p>
 		<div class="rows">
 				<a href="https://github.com/BlackJackMaverick"><i class="fa fa-github"></i><br>Personal Projects</a>
 				<a href="documents/com-sci-resume.pdf" download="Iymen Abdella's Resume"><i class="fa fa-file-text"></i><br> Download Resume</a>
