--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<div class="rows">
 				<a href="https://github.com/BlackJackMaverick"><i class="fa fa-github"></i><br>Personal Projects</a>
 				<a href="documents/com-sci-resume.pdf" download="Iymen Abdella's Resume"><i class="fa fa-file-text"></i><br> Download Resume</a>
-				<a href="mailto:iymen-abdella@hotmail.com"><i class="fa fa-envelope"></i><br>Send me a message:<br>iymen-abdella@hotmail.com</a>
+				<a href="mailto:abdellaiymen@gmail.com"><i class="fa fa-envelope"></i><br>Send me a message:<br>iymen-abdella@hotmail.com</a>
 		</div>
 	</div>
 </body>
